fix: z-index sobre img ampliada

--- a/app/static/css/main/contacto.css
+++ b/app/static/css/main/contacto.css
@@ -20,7 +20,7 @@
     grid-template-columns: 1fr 1fr;
     align-items: center;
     gap: 32px;
-    z-index: 321654632;
+    z-index: 32165;
 }
 
 .contacto--esq p {
